code/python/FactSetConcordance/v2/docs/EntityMatchRequest.md
# EntityMatchRequest

Request object for a requesting multiple Entity Matches.

## Properties
Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**input** | [**[EntityMatchRequestInput]**](EntityMatchRequestInput.md) |  | 
**include_entity_type** | **[str]** | Three-character FactSet entity type code used to filter candidates in order to determine the final match result. Only candidates with an entity type specified will be considered for the final match result. Multiple types can be entered separated by commas   |Entity Type Code|Entity Type Description|Entity Type Code|Entity Type Description|   |---|---|---|---|   |ABS|Asset-Backed|MED|Broadcast Call Sign|   |BAS|Business Association (JP)|MUC|Mutual Fd-Closed End|   |CAC|Consolidated Accounting|MUE|Mutual Fd-ETF|   |CMD|Commodity|MUT|Mutual Fd-Open End|   |COL|College/University|NPO|Non-Profit Organization|   |CUR|Currency|OPD|Operating Division|   |ESP|Emp Stk Ownership Plan|OTH|Other|   |EXT|Extinct|PEF|Pension Fund|   |FAF|Family of Fds (VC/Pvt EQ)|PRO|Real Property|   |FND|Foundation/Endowment|PUB|Public Company|   |FNS|Financing Subsidiary/SPE|PVF|Private Eq Fd/Alt Invt|   |FRX|ForEx|PVT|Private Company|   |GOV|Government|SOV|Sovereign Wealth Fund|   |HED|Hedge Fund|SUB|Subsidiary|   |HOL|Holding Company|TRU|Trust/Trustee|   |IDX|Index|UMB|Umbrella Fund|   |VEN|Venture Capital Fund|JVT|Joint Venture|  | [optional] 
**exclude_entity_type** | **[str]** | Three-character FactSet entity type code used to filter candidates in order to determine the final match result. Candidates with an entity type specified will not be considered for the final match result. Multiple types can be entered separated by commas.   |Entity Type Code|Entity Type Description|Entity Type Code|Entity Type Description|   |---|---|---|---|   |ABS|Asset-Backed|MED|Broadcast Call Sign|   |BAS|Business Association (JP)|MUC|Mutual Fd-Closed End|   |CAC|Consolidated Accounting|MUE|Mutual Fd-ETF|   |CMD|Commodity|MUT|Mutual Fd-Open End|   |COL|College/University|NPO|Non-Profit Organization|   |CUR|Currency|OPD|Operating Division|   |ESP|Emp Stk Ownership Plan|OTH|Other|   |EXT|Extinct|PEF|Pension Fund|   |FAF|Family of Fds (VC/Pvt EQ)|PRO|Real Property|   |FND|Foundation/Endowment|PUB|Public Company|   |FNS|Financing Subsidiary/SPE|PVF|Private Eq Fd/Alt Invt|   |FRX|ForEx|PVT|Private Company|   |GOV|Government|SOV|Sovereign Wealth Fund|   |HED|Hedge Fund|SUB|Subsidiary|   |HOL|Holding Company|TRU|Trust/Trustee|   |IDX|Index|UMB|Umbrella Fund|   |VEN|Venture Capital Fund|JVT|Joint Venture|  | [optional] 
**candidates_count** | **int** | Maximum number of candidates to be returned. Parent entities, when includeParent is true, are not included in this count.  | [optional]  if omitted the server will use the default value of 20
**include_entity_sub_type** | **[str]** | Two-character FactSet entity subtype code used to filter candidates in order to determine the final match result. Only candidates with an entity subtype specified will be considered for the final match result. Multiple types can be entered separated by commas.   |Entity Subtype Code|Entity Subtype Description|Entity Subtype Code|Entity Subtype Description|   |---|---|---|---|   |AR|Arbitrage|IC|Investment Company|   |BM|Bank Investment Division|IN|Insurance Company|   |BR|Broker|MF|Mutual Fund Manager|   |CP|Corporate|ML|Master Ltd Part|   |CU|Custodial|MM|Market Maker|   |FF|Fund of Funds Manager|PB|Private Banking/Wealth Mgmt|   |FH|Fund of Hedge Funds Manager|PF|Pension Fund Manager|   |FO|Foundation/Endowment Manager|PP|Real Estate Manager|   |FS|Fund Distributor|RE|Research Firm|   |FU|Fund|SB|Subsidiary Branch|   |FY|Family Office|ST|Stock Borrowing/Lending|   |GV|Govt (Fed/Local/Agency)|SV|Sovereign Wealth Manager|   |HF|Hedge Fund Manager|VC|Venture Capital/Pvt Equity|   |IA|Investment Adviser|   |IB|Investment Banking|  | [optional] 
**exclude_entity_sub_type** | **[str]** | Two-character FactSet entity subtype code used to filter candidates in order to determine the final match result. Candidates with an entity subtype specified will not be considered for the final match result. Multiple types can be entered separated by commas.   |Entity Subtype Code|Entity Subtype Description|Entity Subtype Code|Entity Subtype Description|   |---|---|---|---|   |AR|Arbitrage|IC|Investment Company|   |BM|Bank Investment Division|IN|Insurance Company|   |BR|Broker|MF|Mutual Fund Manager|   |CP|Corporate|ML|Master Ltd Part|   |CU|Custodial|MM|Market Maker|   |FF|Fund of Funds Manager|PB|Private Banking/Wealth Mgmt|   |FH|Fund of Hedge Funds Manager|PF|Pension Fund Manager|   |FO|Foundation/Endowment Manager|PP|Real Estate Manager|   |FS|Fund Distributor|RE|Research Firm|   |FU|Fund|SB|Subsidiary Branch|   |FY|Family Office|ST|Stock Borrowing/Lending|   |GV|Govt (Fed/Local/Agency)|SV|Sovereign Wealth Manager|   |HF|Hedge Fund Manager|VC|Venture Capital/Pvt Equity|   |IA|Investment Adviser|   |IB|Investment Banking|  | [optional] 
**include_parent** | **bool** | Flag to include parent entities in the list of candidates. This parameter does not influence the match result.  | [optional]  if omitted the server will use the default value of False
**universe_id** | **int** | The universeId to save this set of inputs to  | [optional] 
**any string name** | **bool, date, datetime, dict, float, int, list, str, none_type** | any string name can be used but the value must be the correct type | [optional]

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


